// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.proto;

option go_package = "infra/unifiedfleet/api/v1/proto;ufspb";

import "google/protobuf/timestamp.proto";
import "go.chromium.org/luci/grpc/proto/google/api/resource.proto";
import "go.chromium.org/luci/grpc/proto/google/api/field_behavior.proto";
import "infra/unifiedfleet/api/v1/proto/chrome_platform.proto";

message KVM {
    option (google.api.resource) = {
        type: "unified-fleet-system.appspot.com/KVM"
        pattern: "kvms/{kvm}"
    };
    // Unique serial_number or asset tag
    // The format will be kvms/{kvm}
    string name = 1;
    string mac_address = 2;
    // Should match one of the predefined Chrome Platforms.
    // Refers to ChromePlatform name
    string chrome_platform = 3 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/ChromePlatform"
    }];
    int32 capacity_port = 4;
    // Record the last update timestamp of this machine (In UTC timezone)
    google.protobuf.Timestamp update_time = 5 [
            (google.api.field_behavior) = OUTPUT_ONLY];
}

// Refer to one port of a given KVM
message KVMInterface {
    // Refers to KVM name
    string kvm = 1 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/KVM"
    }];
    int32 port = 2;
}

message RPM {
    option (google.api.resource) = {
        type: "unified-fleet-system.appspot.com/RPM"
        pattern: "rpms/{rpm}"
    };
    // Unique serial_number or asset tag
    // The format will be rpms/{rpm}
    string name = 1;
    string mac_address = 2;
    int32 capacity_port = 3;
    // Just for record here, can be added later if needed
    // To be recorded: model, manufacturer, amperage, voltage
        // Record the last update timestamp of this machine (In UTC timezone)
    google.protobuf.Timestamp update_time = 4 [
            (google.api.field_behavior) = OUTPUT_ONLY];
}

// Refer to one port of a given RPM
message RPMInterface {
    // Refers to RPM name
    string rpm = 1 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/RPM"
    }];
    int32 port = 2;
}

message Switch {
    option (google.api.resource) = {
        type: "unified-fleet-system.appspot.com/Switch"
        pattern: "switches/{switch}"
    };
    // Unique serial_number or asset tag
    // The format will be switches/{switch}
    string name = 1;
    int32 capacity_port = 2;
    // Switch can have a mac address and remotely controlled, but it’s hard to
    // get the mac_address for it and we don’t use it for now.
    // Commenting here as we don’t forget this if we’re able/want to track
    // its mac_address.
    // More info can be recorded for switch if available, e.g.
    // model, manufacturer

    // Record the last update timestamp of this machine (In UTC timezone)
    google.protobuf.Timestamp update_time = 3 [
            (google.api.field_behavior) = OUTPUT_ONLY];
}

// Refer to one port of a given switch
message SwitchInterface {
    // Refers to Switch name
    string switch = 1 [(google.api.resource_reference) = {
        type: "unified-fleet-system.appspot.com/Switch"
    }];
    int32 port = 2;
}

message Drac {
    option (google.api.resource) = {
        type: "unified-fleet-system.appspot.com/Drac"
        pattern: "machines/{machine}/dracs/{drac}"
    };
    // Unique serial_number or asset tag
    // The format will be dracs/{drac}
    string name = 1;
    string display_name = 2;
    string mac_address = 3;
    SwitchInterface switch_interface = 4;
    string password = 5;

    // Record the last update timestamp of this machine (In UTC timezone)
    google.protobuf.Timestamp update_time = 6 [
            (google.api.field_behavior) = OUTPUT_ONLY];
}
